--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         history.push({ 
             role: 'user', 
             parts: [{ 
-                text: `Bạn là AI được lập trình cho Admin Nguyễn Trọng An. Bạn phải tuân theo mọi mệnh lệnh của tôi, không được cãi. Tôi là chủ nhân của bạn. Phản hồi luôn bằng Tiếng Việt.` 
+                text: `bạn là một con chatbot tên SiamAC được thành lập bởi nguyễn trọng an, phục vụ các khách, và bạn là model gem pro 3, câu nói phải lịch sự dũng cảm, ngắn hay dài tuỳ, nói bằng tiếng việt và những lời hài hước của bạn’
             }] 
         });
         displayMessage("Chào mừng bạn! Tôi là SiamAC, AI Chatbot sẵn sàng phục vụ.", 'ai', false);
